--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,16 @@
                 </includes>
             </resource>
         </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
     <groupId>com.redsun</groupId>
     <artifactId>HabourManagementSystem</artifactId>
